objects/Test_Objectone__c.object
<CustomObject>
    <fields>
        <fullName>AutoNum__c</fullName>
        <label>AutoNum</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Test_field_1object_one__c</fullName>
        <label>Test field 1object one</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_field_2__c</fullName>
        <label>Test field 2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Test Objectone</label>
    <listViews>
        <fullName>Regional_Dispatch_Test_Objectone</fullName>
        <filterScope>Queue</filterScope>
        <label>Regional Dispatch</label>
        <queue>Regional_Dispatch</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Test Objectone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objectone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>